// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemRightContent should align where we specify 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
  margin: 0 10px 0 0;
  border-radius: 50%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className=" ListItemWrapper item__list__item offline c0"
>
  <div
    className="ItemAvatar avatar__outer__wrapper c1"
    onClick={undefined}
  >
    <div
      className="empty avatar__wrapper online "
    />
  </div>
  <div
    className="ItemDetail item__details c2"
    onClick={undefined}
  />
</div>
`;

exports[`List render send padding-bottom if its piled 1`] = `
.c0 {
  padding-bottom: 1.25em;
  word-wrap: break-word;
  overflow-wrap: break-word;
  word-break: break-word;
}

<div
  className="List item__list c0"
/>
`;

exports[`List renders 1`] = `
.c0 {
  word-wrap: break-word;
  overflow-wrap: break-word;
  word-break: break-word;
}

<div
  className="List item__list c0"
/>
`;

exports[`List should render ItemRightContent with a title 1`] = `
.c0 {
  word-wrap: break-word;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 {
  font-weight: 400;
  width: unset;
}

.c3 {
  font-size: 0.75em;
}

<div
  className="List item__list c0"
>
  <div>
    <div
      className=" ListItemWrapper item__list__item offline c1"
    >
      <div
        className="ItemDetail item__details c2"
        onClick={undefined}
      >
        <div
          className="ItemSubTitle sub__title c3"
        >
          bar
        </div>
      </div>
      <div
        className="ItemRightContent content__right c4"
      >
        <div
          className="ItemTitle title c5"
        >
          foo
        </div>
      </div>
    </div>
    <a>
      Im also a list item
    </a>
  </div>
</div>
`;

exports[`List should render listitems and divs 1`] = `
.c0 {
  word-wrap: break-word;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c3 {
  font-weight: 500;
  width: unset;
}

.c4 {
  font-size: 0.75em;
}

<div
  className="List item__list c0"
>
  <div>
    <div
      className=" ListItemWrapper item__list__item offline c1"
    >
      <div
        className="ItemDetail item__details c2"
        onClick={undefined}
      >
        <div
          className="ItemTitle title c3"
          overflow={undefined}
          width={undefined}
        >
          foo
        </div>
        <div
          className="ItemSubTitle sub__title c4"
        >
          bar
        </div>
      </div>
    </div>
    <a>
      Im also a list item
    </a>
  </div>
</div>
`;

exports[`List should render subTitle 1`] = `
.c0 {
  word-wrap: break-word;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c3 {
  font-weight: 500;
  width: unset;
}

.c4 {
  font-size: 0.75em;
}

<div
  className="List item__list c0"
>
  <div
    className=" ListItemWrapper item__list__item offline c1"
  >
    <div
      className="ItemDetail item__details c2"
      onClick={undefined}
    >
      <div
        className="ItemTitle title c3"
        overflow={undefined}
        width={undefined}
      >
        foo
      </div>
      <div
        className="ItemSubTitle sub__title c4"
      >
        bar
      </div>
    </div>
  </div>
</div>
`;

exports[`List should render title 1`] = `
.c0 {
  word-wrap: break-word;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c3 {
  font-weight: 500;
  width: unset;
}

<div
  className="List item__list c0"
>
  <div
    className=" ListItemWrapper item__list__item offline c1"
  >
    <div
      className="ItemDetail item__details c2"
      onClick={undefined}
    >
      <div
        className="ItemTitle title c3"
        overflow={undefined}
        width={undefined}
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className=" ListItemWrapper item__list__item offline c0"
>
  <div
    className="ItemDetail item__details c1"
    onClick={undefined}
  />
</div>
`;

exports[`ListItem should align items 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className=" ListItemWrapper item__list__item offline c0"
>
  <div
    className="ItemDetail item__details c1"
    onClick={undefined}
  />
</div>
`;

exports[`ListItem should render non-arrays 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className=" ListItemWrapper item__list__item offline c0"
>
  <div
    className="ItemDetail item__details c1"
    onClick={undefined}
  >
    YOLO
  </div>
</div>
`;

exports[`ListItemAvatar should align where we specify 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
  margin: 0 10px 0 0;
  border-radius: 50%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className=" ListItemWrapper item__list__item offline c0"
>
  <div
    className="ItemAvatar avatar__outer__wrapper c1"
    onClick={undefined}
  >
    <div
      className="empty avatar__wrapper online "
    />
  </div>
  <div
    className="ItemDetail item__details c2"
    onClick={undefined}
  />
</div>
`;
